--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,29 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('../partials/header') %>
+
     <form id="new-form" action="/flights" method="POST">
         <label>Airline</label>
         <select name="airline">
-            <option value="american">American</option>
-            <option value="southwest">Southwest</option>
-            <option value="united">United</option>
+            <option value="American">American</option>
+            <option value="Southwest">Southwest</option>
+            <option value="United">United</option>
           </select>
         <label>Airport Destination</label>
         <select name="airport">
-          <option value="aus">AUS</option>
-          <option value="dfw">DFW</option>
-          <option value="den">DEN</option>
-          <option value="lax">SAN</option>
+          <option value="AUS">AUS</option>
+          <option value="DFW">DFW</option>
+          <option value="DEN">DEN</option>
+          <option value="SAN">SAN</option>
+          <option value="LAX">LAX</option>
         </select>
         <input type="number" name="flightNo">
-        <input type="date" name="departs">
+        <input type="datetime-local" name="departs">
         <input type="submit" value="Add Flight">
       </form>
       
-</body>
-</html>
+      <%- include('../partials/footer') %>
