--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><%= airline %></h1>
+    <p>Welcome to <%= airline %></p>
+    <a href="/flights/new">New Flight</a><br>
+    <a href="/flights">All Flights</a>
   </body>
 </html>
