--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -8,16 +8,16 @@
             </tr>
         </thead>
         <tbody>
-            <% flights.forEach(function(f) { %>
-            <tr>
-                <td><%= f.airline %></td>
-                <td><%= f.airport %></td>
-                <td><%= f.flightNo %></td>
-                <td><%= f.departs %></td>
-                <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
-            </tr>
-            <% }); %>
-        </tbody>
-    </table>
+            <% flights.forEach((f) => { %>
+                <tr>
+                    <td><%= f.airline %> </td>
+                    <td><%= f.airport %> </td>
+                    <td><%= f.flightNo %> </td>
+                    <td><%= f.departs %> </td>
+                    <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
+                </tr>
+                    <% }) %>
+            </tbody>
+            </table>
 
     <%- include('../partials/footer') %>
