--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,23 +1,27 @@
 <%- include('../partials/header') %>
-
+    <h1> Flights</h1>
     <table id="list">
         <thead>
-            <tr>
-                <th>Flights</th>
-                <th></th>
-            </tr>
+          <tr>
+            <th>Airline</th>
+            <th>Airport</th>
+            <th>Flight number</th>
+            <th>Depart</th>
+          </tr>
         </thead>
-        <tbody>
-            <% flights.forEach((f) => { %>
-                <tr>
-                    <td><%= f.airline %> </td>
-                    <td><%= f.airport %> </td>
-                    <td><%= f.flightNo %> </td>
-                    <td><%= f.departs %> </td>
-                    <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
-                </tr>
-                    <% }) %>
-            </tbody>
-            </table>
-
-    <%- include('../partials/footer') %>
+    <tbody>
+        <% flights.forEach((f) => { %>
+            <tr>
+                <td><%= f.airline %> </td>
+                <td><%= f.airport %> </td>
+                <td><%= f.flightNo %> </td>
+                <td><%= f.departs %> </td>
+                <td><a href="/flights/<%= f._id %>">Details</a></td>
+                <td><form action="flights/<%= f._id %>?_method=DELETE" method="POST">
+                    <button type="submit">X</button>
+                  </form></td>
+            </tr>
+                <% }) %>
+        </tbody>
+        </table>
+<%- include('../partials/footer') %>
