--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,23 +1,30 @@
 <%- include('../partials/header') %>
-
+    <h1>Flights new</h1>
     <form id="new-form" action="/flights" method="POST">
         <label>Airline</label>
         <select name="airline">
-            <option value="American">American</option>
-            <option value="Southwest">Southwest</option>
-            <option value="United">United</option>
-          </select>
-        <label>Airport Destination</label>
+          <option value="American">American</option>
+          <option value="United">United</option>
+          <option value="Delta">Delta</option>
+          <option value="Southwest">Southwest</option>
+        </select>
+    </br>
+        <label>Airport</label>
         <select name="airport">
           <option value="AUS">AUS</option>
           <option value="DFW">DFW</option>
           <option value="DEN">DEN</option>
-          <option value="SAN">SAN</option>
           <option value="LAX">LAX</option>
+          <option value="SAN">SAN</option>
+          <option value="ORD">ORD</option>
         </select>
-        <input type="number" name="flightNo">
-        <input type="datetime-local" name="departs">
+    </br>
+        <label>Flight number</label>
+        <input type="text" name="flightNo" placeholder="Number between 10 and 9999"/>
+    </br>
+        <label>Flight time</label>
+        <input type="datetime-local" name="departs"/>
         <input type="submit" value="Add Flight">
       </form>
-      
-      <%- include('../partials/footer') %>
+    </form>
+<%- include('../partials/footer') %>
