--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,5 +1,4 @@
 <%- include('../partials/header') %>
-
 <section id="show-page">
     <div>Airline: </div>
     <div><%= flight.airline %></div>
@@ -9,31 +8,30 @@
     <div><%= flight.flightNo %></div>
     <div>Departure: </div>
     <div><%= flight.departs %></div>
+  <!-- start destination list -->
+  <div>Destination:</div>
+  <ul>
+    <%- flight.destinations.map(d =>
+      `<li>${d.destination}</li>`
+    ).join('') %>
+  </ul>
+  <!-- end destination list -->
+</section>
+<!-- add to destination form below this comment -->
+<form id="add-loc-to-destination" action="/flights/<%= flight._id %>/destinations" method="POST">
+  <select name="destination">
+    <%- destinations.map(d =>
+      `<option value="${d._id}">${d.destination}</option>`
+    ).join('') %>
+  </select>
+  <button type="submit">Add to destination</button>
+</form>
   </section>
-   
-    <div>Destination:</div>
-    <ul>
-      <%- flight.destination.map(p => 
-        `<li>${d.location}</li>`
-      ).join('') %>
-    </ul>
-  </section>
- 
-  <form id="add-loc-to-destination" action="/flights/<%= flight._id %>/destinations" method="POST">
-    <select location="destinationId">
-      <%- destinations.map(p => 
-        `<option value="${d._id}">${d.location}</option>`
-      ).join('') %>
-    </select>
-    <button type="submit">Add to Destinations</button>
-  </form>
-
-
   <br><br><h2>Tickets</h2>
   <form id="add-ticket" method="POST"
     action="/flights/<%= flight._id %>/tickets">
     <label>Seat:</label>
-    <input name="seat" required pattern="[A-F][1-9]\d?">
+    <input name="seat" required pattern="[A-F][1-9]\d?" placeholder="Please enter your desired seat">
     <label>Price:</label>
     <select name="price">
       <option value="400">First Class</option>
@@ -63,10 +61,5 @@
     </table>
   <% } else { %>
     <h5>No Tickets Yet</h5>
-  <% } %> 
-
-
-
-
-
+  <% } %>
 <%- include('../partials/footer') %>
