Edited Final Part 3

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,12 +10,12 @@
     <nav>
         <ul>
             <a href="/">Home</a>
-            <a href="/flights/new">
+            <a href="/flights/new"
                 <%- title === 'Add Flight' ? 'class ="active"': '' %>>Add Flight</a>
-            <a href="/flights">
-                <%- title === 'All Flights' ? 'class ="active"': '' %>>All Flights</a>
-            <a href="/destinations/new">
-                <%- title === 'Add destination' ? 'class ="active"': '' %>>Add destination</a>
+            <a href="/flights"
+                <%- title === 'All Flights' ? 'class ="active"' : '' %>>All Flights</a>
+            <a href="/destinations/new"
+                <%- title === 'Add destination' ? 'class ="active"': '' %>>Add Destination</a>
         </ul>
     </nav>
 <main>
